# aws-lambda-deploy-the-right-way

./: .pre-commit-config.yaml  .releaserc  .terraform-docs.yaml  Dockerfile  JenkinsfileLABS  README.md  build_dependencies_package.sh  package.json  pyproject.toml
lambda_file_distribution/: __init__.py  file_distribution_lambda.py
terraform/: .terraform.lock.hcl  cloudwatch.tf  data.tf  iam.tf  lambda.tf  locals.tf  provider.tf  s3.tf  ssm.tf  state.tf  terraform.dev.backend-config.tfvars  terraform.dev.tfvars  terraform.labs.backend-config.tfvars  terraform.labs.tfvars  terraform.prod.backend-config.tfvars  terraform.prod.tfvars  terraform.sit.backend-config.tfvars  terraform.sit.tfvars  terraform.uat.backend-config.tfvars  terraform.uat.tfvars  variables.tf  versions.tf
terraform/lambda_dependencies_layer/: .terraform.lock.hcl  lambda_layer.tf  provider.tf  state.tf  terraform.nonprod.backend-config.tfvars  terraform.nonprod.tfvars  terraform.prod.backend-config.tfvars  terraform.prod.tfvars  variables.tf  versions.tf
